# analysis_of_economical_tendencies

./: .gitmodules  CMakeLists.txt  README.md
application/src/: main.cpp
application/src/Controller/: AbstractController.h
application/src/Controller/BadRequestController/: BadRequestController.h
application/src/Controller/CurrencyInvestingProfitability/: CurrencyInvestingProfitabilityController.cpp  CurrencyInvestingProfitabilityController.h
application/src/Exception/: Exception.h  NotSupportedException.h
application/src/Routing/: Route.h  Router.cpp  Router.h
application/src/Routing/Parser/: Request.h  RequestParser.cpp  RequestParser.h
config/: config.h
